# viceOS

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: bootinfo.rs  lib.rs  logging.rs  test_render.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  base.rs  gdt.rs  idt.rs  mod.rs  paging.rs  serial.rs
kernel/src/asm/: boot_stub.asm
kernel/src/drivers/: keyboard.rs  mod.rs  screen.rs
kernel/src/mem/: heap.rs  mod.rs  phys.rs  virt.rs
kernel/src/proc/: context.rs  manager.rs  mod.rs  process.rs  scheduler.rs  thread.rs
linker/: x86_64.ld  x86_64_direct.ld
