[package]
name = "vice_kernel"
version = "0.1.0"
edition = "2024"

[lib] # Must be a static lib to link with boot stub
name = "vice_kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
spin = "0.10.0"
paste = "1"
log = "0.4.29"
bitflags = "2.11.0"
linked_list_allocator = "0.10.5"
derivative = { version = "2.2.0", features = ["use_core"] }
libm = "0.2.16"

[dependencies.tiny-skia]
version = "0.12.0"
default-features = false
features = ["no-std-float"]
